<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/corporate" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/cs_title"
            android:textColor="#5e0926"
            android:textStyle="bold"></TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text1">

                </TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text2"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text3"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text4"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text5"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text6"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text7"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text8"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cs_text9"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text10"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text11"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text12"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text13"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text14"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text15"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text16"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text17"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text18"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text19"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text20"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text21"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text22"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text23"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text24"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text25"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text26"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text27"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cs_text28"></TextView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
