<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/about_image" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/a_title"
            android:textColor="#5e0926"
            android:textStyle="bold"></TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_txt1"
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text1"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/tv_txt2"
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text2"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text3"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text4"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text5"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text6"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text7"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text8"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text9"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text10"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text11"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text12"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_text13"
                    android:textStyle="bold"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text14"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text15"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text16"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text17"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text18"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text19"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text20"></TextView>

                <TextView
                    style="@android:style/TextAppearance.Widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/a_text21"></TextView>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>
